# PokemonRust

./: Cargo.toml
map_parser/: Cargo.toml
pokemon_rust/: Cargo.toml
pokemon_rust/assets/characters/example_npc/: spritesheet.ron
pokemon_rust/assets/characters/lucas/: lucas-running.ron  lucas-walking.ron
pokemon_rust/assets/pokemon/: gen1_sprites.ron
pokemon_rust/src/: lib.rs
pokemon_rust/src/battle/backend/: rng.rs
pokemon_rust/src/battle/frontend/animations/: info_card.rs
pokemon_rust/src/lua/: mod.rs
pokemon_rust/src/overworld/events/: map_change_event.rs
pokemon_rust/src/text/: mod.rs
